<resources>
    <string name="app_name">Capptan</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="login">Entrar</string>
    <string name="register">Cadastrar-se</string>
    <string name="redefine_password">Esqueceu a Senha?</string>
    <string name="email_invalid">Email invalido</string>
    <string name="password_invalid">Senha invalida</string>
    <string name="name">Nome</string>
    <string name="register_label">Bem vindo, Cadastre-se!</string>
    <string name="cancel">Cancelar</string>
    <string name="save">Salvar</string>
    <string name="send">Enviar</string>
    <string name="recovery">Recuperar</string>
    <string name="required_fild">Campo Obrigatório</string>
    <string name="validate_caracter">Senha deve ter no minimo 6 caracteres</string>
    <string name="type_email">Digite seu email</string>
    <string name="auth">Autenticando Aguarde…</string>
    <string name="auth_fail">Autenticação falhou!</string>
    <string name="register_fail">Falha ao cadastrar usuário!</string>
    <string name="title_schedule_open">Abertas</string>
    <string name="title_schedule_close">Fechadas</string>
    <string name="title_perfil">Perfil</string>
    <string name="description">Descrição</string>
    <string name="title">Titulo</string>
    <string name="new_schedule">Cadastre uma nova pauta!</string>
    <string name="detail">Detalhes</string>
    <string name="autor">Autor</string>
    <string name="send_email">Email enviado!</string>
    <string name="perfil_user">Perfil do usuário</string>
    <string name="logout">Logout</string>
    <string name="close">Finalizar</string>
    <string name="reopen">Reabrir</string>
    <string name="status">Status Pautas</string>
    <string name="open_schedule">Pautas abertas!</string>
    <string name="close_schedule">Pautas fechadas!</string>
</resources>
